@@ -1,3 +1,12 @@
+Tue Jan  6 12:56:14 1998  Mario Weilguni  <mario@loki.valhalla.at>
+
+	* main.cpp: the main kppp window has now layout control
+
+	* connect.cpp: layouted the connection window.
+
+	* modeminfo.cpp (ModemInfo): layoutet the modeminfo dialog
+	  and layouted the ModemTransfer dialog (ATI query)
+
 Mon Jan  5 20:59:00 1998  Harri Porten  <porten@tu-harburg.de>
 
 	* accounting.cpp: telephone costs are stored in kppprc now.
